# solo-os

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  solo-os.example.yml
.github/workflows/: ci.yml
agent_generated/: README.md  _index.md
agent_generated/plans/: LATEST.md
agents/: README.md  agm.md  big-thinker.md  big_thinker.md  bt.md  chief-of-staff.md  chief_of_staff.md  cos.md  design-lead.md  design.md  eng_lead.md  growth.md  guru.md  pm.md  product-manager.md  qa.md  quality-engineer.md  research-analyst.md  research_guru.md  sec.md  security-engineer.md  security_eng.md  software-engineer.md  staff.md  workflow_orchestrator.md
commands/: README.md  bl-checkpoint-b.md  bl-create.md  bl-execute.md  bl-merge.md  bl-recalibrate.md  bl-revisit.md  daily-triage.md  idea-triage.md  roadmap-plan.md
docs/: README.md  cli-reference.md  port-plan.md  public-readiness-audit.md  workflow-spec.md
docs/governance/: build-loop-and-release-rhythm.md  git-commit-protocol.md  workflow-system.md
docs/plans/: BL17-generalization-plan-v1.md
skills/: README.md
skills/10x-vision-sprint/: SKILL.md
skills/build-loop-and-release-rhythm/: SKILL.md
skills/competitive-intelligence-brief/: SKILL.md
skills/customer-discovery-interview/: SKILL.md
skills/customer-segment-and-access-map/: SKILL.md
solo_os/: __init__.py  __main__.py  cli.py  common.py  config.py  display.py  github_ops.py
templates/: build-loop-body-template.md  idea-body-template.md  roadmap-body-template.md
(+31 files in other folders)
